# Blog-API

./: .editorconfig  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: pr.yml  py.yml
blogapi/: conftest.py  manage.py
blogapi/blog/: admin.py  apps.py  models.py  schemas.py  services.py  tasks.py  urls.py
blogapi/blog/api/: __init__.py  author.py  comments.py  posts.py
blogapi/blog/migrations/: 0001_initial.py  0002_rename_authomatic_answer_delay_post_automatic_answer_delay.py  0002_rename_is_ai_generated_comment_ai_generated_and_more.py  0003_rename_automaticly_answer_comments_post_automatically_answer_comments.py  0004_remove_comment_blocked_comment_status_post_status_and_more.py  0005_alter_comment_options_alter_post_options_and_more.py  0006_comment_last_moderated_post_last_moderated_and_more.py
blogapi/blog/tests/: test_comments_api.py  test_posts_api.py  test_rest_api.py
blogapi/blog/tests/fixtures/: clients.py  models.py
blogapi/core/tests/fixtures/: __init__.py  auth.py  misc.py
blogapi/core/utils/: datetime.py
blogapi/project/: api.py  celery.py  urls.py
blogapi/project/settings/: __init__.py  base.py  custom.py  envvars.py  ninja.py  rq.py
blogapi/project/settings/templates/: settings.dev.py  settings.github.py  settings.prod.py  settings.unittest.py
blogapi/users/: api.py
scripts/: docker_entrypoint.sh  entrypoint.sh  run_django.sh  run_rq.sh  run_rqscheduler.sh
