[tool.poetry]
name = "blogapi"
version = "0.1.0"
description = ""
authors = ["SherlockH0 <ddmlf7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
